<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/TestQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nWhat is 'Kitsune' in English?\n"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/answer1"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/TestQuestion"
            android:text="@string/testQ1A1"
            android:onClick="answer1"/>
        <Button
            android:id="@+id/answer2"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/answer1"
            android:text="@string/testQ1A2"
            android:onClick="answer2"/>
        <Button
            android:id="@+id/answer3"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/answer2"
            android:text="@string/testQ1A3"
            android:onClick="answer3"/>
        <Button
            android:id="@+id/answer4"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/answer3"
            android:text="@string/testQ1A4"
            android:onClick="answer4"/>

    </RelativeLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>

