<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/TestQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\nOtou-san is Father in Japanese. When would you use -san?\n"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/TestQuestion">
            <Button
                android:id="@+id/answer1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/testQ2A1"
                android:onClick="answer1"/>
            <Button
                android:id="@+id/answer2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/testQ2A2"
                android:onClick="answer2"/>
            <Button
                android:id="@+id/answer3"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/testQ2A3"
                android:onClick="answer3"/>
            <Button
                android:id="@+id/answer4"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/testQ2A4"
                android:onClick="answer4"/>
        </LinearLayout>
    </RelativeLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/colorPrimaryDark"/>
</android.support.v4.widget.DrawerLayout>

