<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dim.whatdoyouknow.actJap6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/jap6Title"
                android:textSize="40sp"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="0.4">
                <Button
                    android:id="@+id/goHome"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text=""
                    android:textSize="80sp"
                    android:onClick="goHome"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">
                <Button
                    android:id="@+id/gotoJap2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/jap2Title"
                    android:onClick="gotoJap2"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/gotoJap3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/jap3Title"
                    android:onClick="gotoJap3"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/gotoJap4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/jap4Title"
                    android:onClick="gotoJap4"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/gotoJap5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/jap5Title"
                    android:onClick="gotoJap5"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>
