<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/button_speak"
                android:onClick="gotoJap"
                />
            <Button
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/button_creature"
                android:onClick="gotoCreature"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/button_people"
                android:onClick="gotoPeople"/>
            <Button
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/button_hira"
                android:onClick="gotoHiri"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>