<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:src="@mipmap/cat"
            android:contentDescription="Image of cat"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_weight="0.4"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/creatureText2"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="0.4">
                <Button
                    android:id="@+id/gotoJap4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/creatureTitle3"
                    android:textSize="70sp"
                    android:onClick="gotoCreature3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">
                <Button
                    android:id="@+id/gotoJap2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/creatureTitle2"
                    android:onClick="gotoCreature4"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/gotoJap6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/creatureTitle4"
                    android:onClick="gotoCreature5"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>